--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "module": "index.js",
   "main": "dist/index.js",
   "scripts": {
-    "build": "node ./compileComponents.js && webpack",
-    "prepublish": "npm run build && npm run test ",
+    "build": "npm run build:umd && npm run build:es",
+    "build:umd": "cross-env NODE_ENV=production webpack --config webpack.config.umd.js",
+    "build:es": "cross-env NODE_ENV=production babel . --out-dir . --extensions \".jsx\" --ignore node_modules,sample && npm run copycss",
+    "copycss": "node copyCss.js",
+    "prepublish": "npm run test",
     "test": "npm run build && npm run lint",
-    "lint": "eslint src/",
+    "lint": "eslint src",
     "lint-staged": "lint-staged"
   },
   "repository": {
@@ -41,13 +44,13 @@
   },
   "homepage": "https://github.com/prateekbh/preact-material-components#readme",
   "dependencies": {
+    "babel-runtime": "^6.25.0",
     "material-components-web": "0.17.0"
   },
   "peerDependencies": {
     "preact": "*"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.2.2",
@@ -59,6 +62,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.22.0",
     "babel-preset-babili": "0.1.4",
     "babel-preset-env": "^1.6.0",
@@ -70,7 +74,9 @@
     "babili-webpack-plugin": "0.1.2",
     "clean-webpack-plugin": "^0.1.15",
     "cp": "^0.2.0",
+    "cross-env": "^5.0.2",
     "eslint": "^4.0.0",
+    "eslint-config-prettier": "^2.3.0",
     "eslint-plugin-react": "^7.0.0",
     "lint-staged": "^4.0.0",
     "mkdirp": "^0.5.1",
@@ -81,11 +87,11 @@
     "webpack-shell-plugin": "^0.5.0"
   },
   "lint-staged": {
-    "index.js": [
+    "*/*.{jsx,js}": [
       "prettier --write",
       "git add"
     ],
-    "**/*.jsx": [
+    "+(index.js|copyCss.js|componentsList.js|MaterialComponent.js)": [
       "prettier --write",
       "git add"
     ]
